# kapacitor-udf-rs

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: udf.proto
src/: agent.rs  io.rs  lib.rs  socket_server.rs  stdio_server.rs  traits.rs
